# pianomate

./: README.md
common/dispatcher/: CMakeLists.txt  command_queue.cpp  command_queue.h
common/dispatcher/tests/: CMakeLists.txt  build_tests.sh  dispatcher_test.cpp  dispatcher_test.h  generate_code_coverage.sh
common/generator/: CMakeLists.txt  build.sh  indian_notation.h  indian_note_generator.cpp  indian_note_generator.h  note_generator.cpp  note_generator.h  western_notation.h  western_note_generator.cpp  western_note_generator.h
common/generator/tests/: CMakeLists.txt  generate_code_coverage.sh  note_generator_test.cpp  note_generator_test.h  test.cpp
platform/linux/PianoMate/: MusicSheet.qml  PianoMate.pro  mainwindow.cpp  mainwindow.ui  qml.qrc
platform/web/: index.html
platform/web/css/: style.css
platform/web/js/: main.js
test/sample/: CMakeLists.txt  Math.cpp  Math.h  MathTest.cpp  MathTest.h  clean.sh
